fix footer in about component, added a stack overflow link to footer

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 80px;
-    margin-bottom: 80px;
+    margin-bottom: 170px;
 }
 
 .about-heading {
